# Mildoc

./: README.md
mildoc_admin/: .env
mildoc_index/: .env  .gitignore  embedding.py  main.py  oss_event_handler.py
mildoc_index/parser/: none_parser.py  simple_object_parser.py
mildoc_milvus/milvus_oss/: docker-compose.yml
mildoc_mineru_202601/: .gitignore  mineru_download_model.sh  mineru_start_server.sh  mineru_with_image.py  mineru_without_image.py  pyproject.toml  test.pdf.with.img.md  test.pdf.without.img.md
mildoc_wxkf/: .env
